--- a/ex-blog/style.css
+++ b/ex-blog/style.css
@@ -4,6 +4,8 @@ body {
 
 .container {
     display: flex;
+    align-items: center;
+    justify-content: space-between;
     padding: 10px;
     background: rgb(0, 0, 0);
     font-size: 16px;
@@ -11,28 +13,31 @@ body {
 }
 
 .logo {
+    width: 50px;
+    height: 50px;    
+}
+
+.img-logo {
     width: 100px;
-    height: 100px;
-    
+    border: 2px solid red;
 }
 
 
 .title-blog {
     justify-content: center;
-    margin-top: 5px;
+    margin: 5px;
     padding-right: 100px;
     padding-top: 150px;
-    height: 185px;
+    height: 195px;
     background-image: url("entre-fort.jpg");
+    border: 2px solid #d34343;
 }
 
 .menu {
-    position: fixed;
-    margin-left: 600px;
-    align-self: center;
     background: rgb(0, 0, 0);
     color: rgb(250, 250, 250);
     font-family: Georgia, 'Times New Roman', Times, serif;
+    border: 2px solid red;
 }
 
 .menu:hover{
