--- a/ex-blog/style.css
+++ b/ex-blog/style.css
@@ -1,5 +1,5 @@
 body {
-    background: #363d4a;
+    background: #bcbcbc;
 }
 
 .container {
@@ -7,9 +7,8 @@ body {
     align-items: center;
     justify-content: space-between;
     padding: 10px;
-    background: rgb(0, 0, 0);
+    background: #d3d1d1;
     font-size: 16px;
-    border: 1px solid #4a2a2a
 }
 
 .logo {
@@ -29,13 +28,8 @@ body {
     justify-content: flex-start;
     width: auto;
     height: 450px;
-    margin-top: 5px;
-    border: 2px solid #d34343;
-    background-image: url(legion-first-1200-840.jpg);
-    background-position: top left bottom;
-    text-align: center;
+    background-image: url(image-background-blog/pex-1000.jpg);
     font-size: 80px;
-    color: #4848fd;
 }
 
 .title {
@@ -44,24 +38,23 @@ body {
     justify-content: centre;
     align-items: centre;
     text-align: center;
-    margin-top: 120px;
+    margin-top: 100px;
     font-size: 70px;
-    color: #ed2424;
+    color: #00b238;
 }
 
 .menu {
-    background: rgb(0, 0, 0);
-    color: rgb(250, 250, 250);
+    background: #bcbcbc;
     font-family: Georgia, 'Times New Roman', Times, serif;
-    border: 2px solid red;
 }
 
 .about{
-    color: antiquewhite;
+    text-decoration: dashed;
+    color:#343333;
 }
 
-.menu:hover{
-    color: rgb(255, 148, 60);
+.about:hover{
+    color: rgb(0, 0, 0);
 }
 
 .feet {
@@ -72,7 +65,7 @@ body {
 }
 
 .contact {
-    background: #d34343;
+    background:  #dad5d5;
     text-align: center;
     border: 2px solid beige;
 
@@ -85,7 +78,7 @@ body {
 }
 
 .link-article {
-    background: #d34343;
+    background: #bcbcbc;
     padding: 20px;
     margin: 20px;
     font-size: 20px;
