--- a/ex-blog/style.css
+++ b/ex-blog/style.css
@@ -26,10 +26,11 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    width: auto;
+    width: 100%;
     height: 450px;
     background-image: url(image-background-blog/pex-1000.jpg);
     font-size: 80px;
+    opacity: 0.7;
 }
 
 .title {
