--- a/ex-blog/style.css
+++ b/ex-blog/style.css
@@ -4,12 +4,20 @@ body {
     background: #bcbcbc;
 }
 
+* {
+    margin: 0;
+    padding: 0;
+
+}
+
 .container {
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 10px;
     background: #d3d1d1;
+    position: fixed;
+    width: 100vw;
 }
 
 .img-logo {
@@ -45,6 +53,10 @@ body {
 
     background: #bcbcbc;
     font-family: Georgia, 'Times New Roman', Times, serif;
+    width: 13vw;
+    height: 5vh;
+    text-align: center;
+    margin-right: 20px;
 
 }
 
@@ -75,10 +87,13 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+    height: 80vh;
+    background: #e8e8e8;
+    margin: 20px;
 }
 
 .link-article {
-    background: #bcbcbc;
+    background: #f3f2f2;
     padding: 20px;
     margin: 20px;
     font-size: 20px;
