--- a/ex-blog/style.css
+++ b/ex-blog/style.css
@@ -12,6 +12,7 @@ body {
 
 .container {
     display: flex;
+    flex-direction: row;
     align-items: center;
     justify-content: space-between;
     padding: 10px;
@@ -26,29 +27,6 @@ body {
 }
 
 
-.title-blog {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    width: 100%;
-    height: 450px;
-    background-image: url(image-background-blog/pex-1000.jpg);
-    font-size: 80px;
-    font-family: 'Lato', sans-serif;
-
-}
-
-.title {
-    display: flex;
-    flex-direction: column;
-    justify-content: centre;
-    align-items: centre;
-    text-align: center;
-    margin-top: 100px;
-    font-size: 70px;
-    color: #1500ff;
-}
-
 .menu {
 
     background: #bcbcbc;
@@ -57,16 +35,51 @@ body {
     height: 5vh;
     text-align: center;
     margin-right: 20px;
+    border-radius: 20px;
 
 }
 
+.text-about {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin: 5px;
+    text-transform:capitalize;
+    
+}
+
 .about{
-    text-decoration: dashed;
+    text-decoration: none;
     color:#343333;
 }
 
 .about:hover{
     color: rgb(0, 0, 0);
+}
+
+.title-blog {
+    display: flex;
+    flex-direction: column;
+    width: auto;
+    height: 450px;
+    background-image: url(image-background-blog/pex-1000.jpg) ;
+    font-size: 80px;
+    font-family: 'Lato', sans-serif;
+    margin: 0 20px;
+    
+
+}
+
+.title {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    margin: auto;
+    font-size: 70px;
+    color: #005398;
+    text-decoration: solid;
 }
 
 .feet {
