--- a/ex-blog/style.css
+++ b/ex-blog/style.css
@@ -61,25 +61,35 @@ body {
 .title-blog {
     display: flex;
     flex-direction: column;
+    fl
+    width: auto;
+    height: 500px;
+    margin: 0 20px;
+}
+
+.bk-image {
+    opacity: 0.5;
+    display: flex;
+    flex-direction: column;
     width: auto;
     height: 450px;
-    background-image: url(image-background-blog/pex-1000.jpg) ;
-    font-size: 80px;
-    font-family: 'Lato', sans-serif;
-    margin: 0 20px;
-    
+    margin-top: 90px;
+    position: relative;
 
 }
 
 .title {
+    position: absolute;
+    top: 200px;
     display: flex;
+    text-align: center;
     flex-direction: column;
     align-items: center;
-    text-align: center;
-    margin: auto;
+    width: auto;
+    height: 400px;
     font-size: 70px;
+    margin-left: 30px;
     color: #005398;
-    text-decoration: solid;
 }
 
 .feet {
@@ -87,6 +97,7 @@ body {
     flex-direction: column;
     justify-content: flex-end;
     margin: 10px 20px;
+    
     
 }
 
